Fix layout issue for Safari

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html {
 }
 
 #root {
-    height: 100%;
+    min-height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,6 +86,7 @@ button:active {
     flex-direction: column;
     align-items: center;
     margin-top: 40px;
+    padding-bottom: 40px;
 }
 
 .buttonRow {
